--- a/my_action.css
+++ b/my_action.css
@@ -1,13 +1,101 @@
 .ax-header-action-button {
     color: #C94040;
     background-color: #CCFE67;
-    width: 300px;
-    margin-right: 50px;
-    font-size: 26px;
+    width: 130px;
+    margin-right:-700px;
+    font-size: 19px;
     cursor: pointer;
+}
+.ax-header-button-group {
+    display: flex;
+}
+
+.ax-header-action-button--left {
+    border-bottom-right-radius: 0;
+    border-top-right-radius: 0;
+    margin-right:0px;
+    font-size:19px;
+}
+
+.ax-header-action-button--right {
+    border-bottom-left-radius: 0;
+    border-top-left-radius: 0;
+    border-left: 5px solid #045873;
 }
 
 .ax-header-action-button:hover {
     color: #E5FCB6;
     background-color: #C73C1A;
+}
+
+.ax-header-logout-button {
+    color:#C73C1A;
+    background-color: #CCFE67;
+    width: 120px;
+    margin-right: 20px;
+    font-size: 19px;
+    cursor: pointer;
+}
+.ax-header-logout-button:hover {
+    color: #E5FCB6;
+    background-color:#C73C1A;
+}
+
+@media only screen and (max-width: 800px) {
+    .container {
+        display: inline-block;
+        cursor: pointer;
+        margin-left:0%;
+    }
+    
+    .bar1, .bar2, .bar3 {
+        width: 35px;
+        height: 5px;
+        background-color: #333;
+        margin: 6px 0;
+        transition: 0.4s;
+    }
+    
+    .change .bar1 {
+        -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+        transform: rotate(-45deg) translate(-9px, 6px);
+    }
+    
+    .change .bar2 {opacity: 0;}
+    
+    .change .bar3 {
+        -webkit-transform: rotate(45deg) translate(-8px, -8px);
+        transform: rotate(45deg) translate(-8px, -8px);
+    }
+    .container__content{
+            position: fixed;
+            transition: all 1s ease-out;
+            width: 15%;
+            box-sizing: border-box;
+            left: -15%;
+            height: 100%;
+            top: 0;
+            background-color: transparent;
+            color: red;
+            padding: 50px 50px 0 0;
+    }
+    .container__content .container {
+        position: absolute;
+        top: 8px;
+        right: 20px;
+    }
+    .ax-header-button-group {
+        visibility: hidden;
+    }
+    .ax-header-action-button--left {
+        visibility: hidden;
+    }
+    
+    .ax-header-action-button--right {
+        visibility: hidden;
+    }
+    
+    .ax-header-logout-button {
+        visibility: hidden;
+    }
 }
