--- a/my_action.css
+++ b/my_action.css
@@ -1,26 +1,37 @@
 .ax-header-action-button {
     color: #C94040;
     background-color: #CCFE67;
-    width: 130px;
-    margin-right:-700px;
+    width: 120px;
+    margin-right:10px;
     font-size: 19px;
+    text-decoration: none;
     cursor: pointer;
 }
 .ax-header-button-group {
     display: flex;
+    margin-left:380px;
+}
+.ax-header-right {
+    display: flex;
+    justify-content: center;
+
 }
 
 .ax-header-action-button--left {
-    border-bottom-right-radius: 0;
-    border-top-right-radius: 0;
-    margin-right:0px;
+    border-bottom-right-radius: 2;
+    border-top-right-radius: 2;
+    margin-right:3px;
     font-size:19px;
+    text-decoration: none;
+    text-align: center;
 }
 
 .ax-header-action-button--right {
     border-bottom-left-radius: 0;
     border-top-left-radius: 0;
     border-left: 5px solid #045873;
+    text-align: center;
+     
 }
 
 .ax-header-action-button:hover {
@@ -32,13 +43,19 @@
     color:#C73C1A;
     background-color: #CCFE67;
     width: 120px;
-    margin-right: 20px;
+    margin-right: -500px;
     font-size: 19px;
     cursor: pointer;
 }
 .ax-header-logout-button:hover {
     color: #E5FCB6;
     background-color:#C73C1A;
+}
+.container{
+    visibility: hidden;
+}
+.container__content{
+    visibility: hidden;
 }
 
 @media only screen and (max-width: 800px) {
